<resources>
    <string name="app_name">app</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_simpan">Simpan</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="title_pesanan">Pesanan</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_profile">Profile</string>
    <string name="register"><u>REGISTER</u></string>
    <string name="login"><u>LOGIN</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_produk_simpan">DetailProdukSimpan</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>