<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.shedenk.app.ui.beranda.BerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_simpan"
        android:name="com.shedenk.app.ui.simpan.SimpanFragment"
        android:label="@string/title_simpan"
        tools:layout="@layout/fragment_simpan" />

    <fragment
        android:id="@+id/navigation_keranjang"
        android:name="com.shedenk.app.ui.keranjang.KeranjangFragment"
        android:label="@string/title_keranjang"
        tools:layout="@layout/fragment_keranjang" />

    <fragment
        android:id="@+id/navigation_transaksi"
        android:name="com.shedenk.app.ui.transaksi.TransaksiFragment"
        android:label="@string/title_transaksi"
        tools:layout="@layout/fragment_transaksi" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.shedenk.app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>